[gd_scene load_steps=8 format=3 uid="uid://cerjsdrpv2nw0"]

[ext_resource type="Texture2D" uid="uid://dlpe2r4kdmce7" path="res://assets/backgrounds/WorldBoard.png" id="1_ktfvh"]
[ext_resource type="PackedScene" uid="uid://cbxdojvqt5wqk" path="res://player/world_player.tscn" id="2_nkorc"]
[ext_resource type="Script" path="res://scripts/world_board.gd" id="3_8iqnj"]
[ext_resource type="PackedScene" uid="uid://dvvi6ceukifgv" path="res://enemy/fad_felen.tscn" id="4_wjls5"]
[ext_resource type="PackedScene" uid="uid://cl0il5ctip5gq" path="res://enemy/giant.tscn" id="5_0iemm"]
[ext_resource type="PackedScene" uid="uid://b11survnvtkvq" path="res://enemy/gwyllion.tscn" id="6_21q4v"]
[ext_resource type="PackedScene" uid="uid://b2r8j8rn8g6g5" path="res://enemy/gwiber.tscn" id="7_x76o5"]

[node name="WorldBoard" type="Node2D"]
script = ExtResource("3_8iqnj")

[node name="BoardSprite" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("1_ktfvh")

[node name="WorldPlayer" parent="." node_paths=PackedStringArray("board") instance=ExtResource("2_nkorc")]
board = NodePath("..")

[node name="WorldNodes" type="Node2D" parent="."]

[node name="0,0" type="Node2D" parent="WorldNodes"]

[node name="0,1" type="Node2D" parent="WorldNodes"]
position = Vector2(96, 0)

[node name="0,2" type="Node2D" parent="WorldNodes"]
position = Vector2(184, 0)

[node name="0,3" type="Node2D" parent="WorldNodes"]
position = Vector2(272, 0)

[node name="0,-1" type="Node2D" parent="WorldNodes"]
position = Vector2(-96, 0)

[node name="0,-2" type="Node2D" parent="WorldNodes"]
position = Vector2(-184, 0)

[node name="0,-3" type="Node2D" parent="WorldNodes"]
position = Vector2(-272, 0)

[node name="1,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, 96)

[node name="2,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, 184)

[node name="3,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, 272)

[node name="-1,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, -96)

[node name="-2,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, -184)

[node name="-3,0" type="Node2D" parent="WorldNodes"]
position = Vector2(0, -272)

[node name="2,2" type="Node2D" parent="WorldNodes"]
position = Vector2(128, 128)

[node name="-2,2" type="Node2D" parent="WorldNodes"]
position = Vector2(128, -128)

[node name="-2,-2" type="Node2D" parent="WorldNodes"]
position = Vector2(-128, -128)

[node name="2,-2" type="Node2D" parent="WorldNodes"]
position = Vector2(-128, 128)

[node name="3,3" type="Node2D" parent="WorldNodes"]
position = Vector2(192, 192)

[node name="-3,3" type="Node2D" parent="WorldNodes"]
position = Vector2(192, -192)

[node name="-3,-3" type="Node2D" parent="WorldNodes"]
position = Vector2(-192, -192)

[node name="3,-3" type="Node2D" parent="WorldNodes"]
position = Vector2(-192, 192)

[node name="-3,-1" type="Node2D" parent="WorldNodes"]
position = Vector2(-120, -256)

[node name="-3,1" type="Node2D" parent="WorldNodes"]
position = Vector2(120, -256)

[node name="3,-1" type="Node2D" parent="WorldNodes"]
position = Vector2(-120, 256)

[node name="3,1" type="Node2D" parent="WorldNodes"]
position = Vector2(120, 256)

[node name="-1,-3" type="Node2D" parent="WorldNodes"]
position = Vector2(-256, -120)

[node name="1,-3" type="Node2D" parent="WorldNodes"]
position = Vector2(-256, 120)

[node name="-1,3" type="Node2D" parent="WorldNodes"]
position = Vector2(256, -120)

[node name="1,3" type="Node2D" parent="WorldNodes"]
position = Vector2(256, 120)

[node name="WorldEnemies" type="Node2D" parent="."]

[node name="FadFelen" parent="WorldEnemies" node_paths=PackedStringArray("board") instance=ExtResource("4_wjls5")]
board = NodePath("../..")

[node name="Giant" parent="WorldEnemies" node_paths=PackedStringArray("board") instance=ExtResource("5_0iemm")]
board = NodePath("../..")

[node name="Gwyllion" parent="WorldEnemies" node_paths=PackedStringArray("board") instance=ExtResource("6_21q4v")]
board = NodePath("../..")

[node name="Gwiber" parent="WorldEnemies" node_paths=PackedStringArray("board") instance=ExtResource("7_x76o5")]
homeNode = [-3, -1]
board = NodePath("../..")
